// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChaosExperiment Step Edit View edit mode works 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main chaosExperimentStep"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 75%;"
        >
          <div
            class="StyledProps--font StyledProps--main main nameIdDescriptionField"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        step1
                      </span>
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value="step1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="chaos.pipelineStep.description"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="spec.expectedResilienceScore-2"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-form-group"
                data-id="null-3"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    chaos.selectChaosExperiment
                  </label>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="chaosExperimentReferenceField"
                    id="chaosExperimentReferenceField"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      001167e9-7b03-48d7-97f3-c1b328065f5d
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="spec.expectedResilienceScore-4"
              >
                <label
                  class="bp3-label"
                  for="spec.expectedResilienceScore"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_spec.expectedResilienceScore"
                  >
                    chaos.pipelineStep.expectedResilienceScoreLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.expectedResilienceScore"
                      placeholder="chaos.pipelineStep.expectedResilienceScorePlaceholder"
                      type="number"
                      value="90"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="true"
                  data-testid="optional-config-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="optional-config-summary"
                  >
                    <div
                      class="Accordion--label"
                    >
                      common.optionalConfig
                    </div>
                    <div
                      class="Accordion--chevron"
                    />
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                    style="height: 0px;"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(0);"
                    >
                      <div
                        class="Accordion--details"
                        data-testid="optional-config-details"
                      >
                        <div
                          class="stepPanel"
                        >
                          <div
                            class="formGroup"
                          >
                            <div
                              class="bp3-form-group"
                            >
                              <label
                                class="bp3-label"
                                for="spec.assertion"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="ChaosExperimentStep_spec.assertion"
                                >
                                  assertionLabel common.optionalLabel
                                </span>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                >
                                  <div
                                    class="bp3-input-group MultiTypeInput--input"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="spec.assertion"
                                      placeholder="pipeline.utilitiesStep.assertion"
                                      type="text"
                                      value="faultsPassed > 2"
                                    />
                                  </div>
                                  <span
                                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                  >
                                    <span
                                      class="bp3-popover-target"
                                    >
                                      <button
                                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                        data-testid="multi-type-button"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="error-tracking-child-mounter"
        >
          mounted
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChaosExperiment Step Edit View edit mode works 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main chaosExperimentStep"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 75%;"
        >
          <div
            class="StyledProps--font StyledProps--main main nameIdDescriptionField"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        step1
                      </span>
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value="step1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="chaos.pipelineStep.description"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="spec.expectedResilienceScore-2"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-form-group"
                data-id="null-3"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    chaos.selectChaosExperiment
                  </label>
                  <button
                    class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="chaosExperimentReferenceField"
                    disabled=""
                    id="chaosExperimentReferenceField"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="bp3-spinner bp3-button-spinner"
                    >
                      <div
                        class="bp3-spinner-animation"
                      >
                        <svg
                          height="20"
                          stroke-width="16.00"
                          viewBox="-3.00 -3.00 106.00 106.00"
                          width="20"
                        >
                          <path
                            class="bp3-spinner-track"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          />
                          <path
                            class="bp3-spinner-head"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                            pathLength="280"
                            stroke-dasharray="280 280"
                            stroke-dashoffset="210"
                          />
                        </svg>
                      </div>
                    </div>
                    <span
                      class="bp3-button-text"
                    >
                      001167e9-7b03-48d7-97f3-c1b328065f5d
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="spec.expectedResilienceScore-4"
              >
                <label
                  class="bp3-label"
                  for="spec.expectedResilienceScore"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_spec.expectedResilienceScore"
                  >
                    chaos.pipelineStep.expectedResilienceScoreLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.expectedResilienceScore"
                      placeholder="chaos.pipelineStep.expectedResilienceScorePlaceholder"
                      type="number"
                      value="90"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="true"
                  data-testid="optional-config-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="optional-config-summary"
                  >
                    <div
                      class="Accordion--label"
                    >
                      common.optionalConfig
                    </div>
                    <div
                      class="Accordion--chevron"
                    />
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                    style="height: 0px;"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(0);"
                    >
                      <div
                        class="Accordion--details"
                        data-testid="optional-config-details"
                      >
                        <div
                          class="stepPanel"
                        >
                          <div
                            class="formGroup"
                          >
                            <div
                              class="bp3-form-group"
                            >
                              <label
                                class="bp3-label"
                                for="spec.assertion"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="ChaosExperimentStep_spec.assertion"
                                >
                                  assertionLabel common.optionalLabel
                                </span>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                >
                                  <div
                                    class="bp3-input-group MultiTypeInput--input"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="spec.assertion"
                                      placeholder="pipeline.utilitiesStep.assertion"
                                      type="text"
                                      value="faultsPassed > 2"
                                    />
                                  </div>
                                  <span
                                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                  >
                                    <span
                                      class="bp3-popover-target"
                                    >
                                      <button
                                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                        data-testid="multi-type-button"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="error-tracking-child-mounter"
        >
          mounted
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChaosExperiment Step Edit View edit mode works 3`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main chaosExperimentStep"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 75%;"
        >
          <div
            class="StyledProps--font StyledProps--main main nameIdDescriptionField"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        step1
                      </span>
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value="step1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="chaos.pipelineStep.description"
                  >
                    desc
                  </textarea>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="spec.expectedResilienceScore-2"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-form-group"
                data-id="null-3"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    chaos.selectChaosExperiment
                  </label>
                  <button
                    class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="chaosExperimentReferenceField"
                    disabled=""
                    id="chaosExperimentReferenceField"
                    tabindex="-1"
                    type="button"
                  >
                    <div
                      class="bp3-spinner bp3-button-spinner"
                    >
                      <div
                        class="bp3-spinner-animation"
                      >
                        <svg
                          height="20"
                          stroke-width="16.00"
                          viewBox="-3.00 -3.00 106.00 106.00"
                          width="20"
                        >
                          <path
                            class="bp3-spinner-track"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                          />
                          <path
                            class="bp3-spinner-head"
                            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                            pathLength="280"
                            stroke-dasharray="280 280"
                            stroke-dashoffset="210"
                          />
                        </svg>
                      </div>
                    </div>
                    <span
                      class="bp3-button-text"
                    >
                      001167e9-7b03-48d7-97f3-c1b328065f5d
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="spec.expectedResilienceScore-4"
              >
                <label
                  class="bp3-label"
                  for="spec.expectedResilienceScore"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_spec.expectedResilienceScore"
                  >
                    chaos.pipelineStep.expectedResilienceScoreLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.expectedResilienceScore"
                      placeholder="chaos.pipelineStep.expectedResilienceScorePlaceholder"
                      type="number"
                      value="90"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="true"
                  data-testid="optional-config-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="optional-config-summary"
                  >
                    <div
                      class="Accordion--label"
                    >
                      common.optionalConfig
                    </div>
                    <div
                      class="Accordion--chevron"
                    />
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                    style="height: 0px;"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(0);"
                    >
                      <div
                        class="Accordion--details"
                        data-testid="optional-config-details"
                      >
                        <div
                          class="stepPanel"
                        >
                          <div
                            class="formGroup"
                          >
                            <div
                              class="bp3-form-group"
                            >
                              <label
                                class="bp3-label"
                                for="spec.assertion"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="ChaosExperimentStep_spec.assertion"
                                >
                                  assertionLabel common.optionalLabel
                                </span>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                >
                                  <div
                                    class="bp3-input-group MultiTypeInput--input"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="spec.assertion"
                                      placeholder="pipeline.utilitiesStep.assertion"
                                      type="text"
                                      value="faultsPassed > 2"
                                    />
                                  </div>
                                  <span
                                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                  >
                                    <span
                                      class="bp3-popover-target"
                                    >
                                      <button
                                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                        data-testid="multi-type-button"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="error-tracking-child-mounter"
        >
          mounted
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChaosExperiment Step Edit View should render properly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main chaosExperimentStep"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="width: 75%;"
        >
          <div
            class="StyledProps--font StyledProps--main main nameIdDescriptionField"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="universalInputNameWithId"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    Id
                  </p>
                </div>
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      placeholder="pipeline.stepNamePlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="description-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="bp3-form-group"
            data-id="spec.expectedResilienceScore-1"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-form-group"
                data-id="null-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <label
                    class="bp3-label"
                  >
                    chaos.selectChaosExperiment
                  </label>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="chaosExperimentReferenceField"
                    id="chaosExperimentReferenceField"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      chaos.selectChaosExperiment
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="spec.expectedResilienceScore-3"
              >
                <label
                  class="bp3-label"
                  for="spec.expectedResilienceScore"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="ChaosExperimentStep_spec.expectedResilienceScore"
                  >
                    chaos.pipelineStep.expectedResilienceScoreLabel
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="spec.expectedResilienceScore"
                      placeholder="chaos.pipelineStep.expectedResilienceScorePlaceholder"
                      type="number"
                      value="50"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="false"
                  data-testid="optional-config-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="optional-config-summary"
                  >
                    <div
                      class="Accordion--label"
                    >
                      common.optionalConfig
                    </div>
                    <div
                      class="Accordion--chevron"
                    />
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(-undefinedpx);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="error-tracking-child-mounter"
        >
          mounted
        </div>
      </div>
    </form>
  </div>
</div>
`;
